# stdatamodels

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .ruff.toml  .travis.yml  374.feature.rst  CHANGES.rst  CITATION.cff  CONTRIBUTING.md  README.md  TESTING.md  conftest.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  towncrier.toml  tox.ini
.github/: CODEOWNERS  CONTRIBUTING.md  labeler.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.yaml
.github/workflows/: build.yml  ci.yml  ci_cron.yml  label.yml  test_devdeps.yml  tests.yml  tests_extra.yml
changes/: 263.feature.rst  313.removal.rst  315.feature.rst  316.removal.rst  317.feature.rst  319.feature.rst  320.feature.rst  321.feature.rst  327.bugfix.rst  328.feature.rst  329.feature.rst  330.misc.rst  336.feature.rst  337.feature.rst  338.doc.rst  348.bugfix.rst  352.removal.rst  354.bugfix.rst  356.bugfix.rst  357.feature.rst  358.feature.rst  360.feature.rst  361.feature.rst  362.feature.rst  363.removal.rst  364.bugfix.rst  367.feature.rst  373.removal.rst  375.doc.rst  377.feature.rst  378.removal.rst  379.feature.rst  380.removal.rst  383.misc.rst  393.feature.rst  395.bugfix.rst  399.misc.rst  400.removal.rst  401.bugfix.rst  403.bugfix.rst  (+170 more)
docs/: Makefile  README.md  conf.py  index.rst  rtd_environment.yaml
docs/source/: api.rst  asdf_in_fits.rst  changes.rst  conf.py  index.rst  installation.rst  jwstdatamodel.rst  quickstart.rst  what-is-stdatamodels.rst
docs/source/_templates/autosummary/: class.rst
docs/source/jwst/datamodels/: attributes.rst  index.rst  metadata.rst  models.rst  new_model.rst  schemas.rst  structure.rst  switch-from-fits.rst
docs/source/jwst/kwtool/: index.rst  keyword_dictionary.rst  kwtool.rst  top.miri.coron.schema.json
docs/source/jwst/transforms/: index.rst
src/stdatamodels/: __init__.py  asdf_in_fits.py  basic_utils.py  bozo.py  dqflags.py  dynamicdq.py  exceptions.py  extensions.py  filetype.py  fits_support.py  history.py  integration.py  model_base.py  ndmodel.py  properties.py  schema.py  stnode.py  stnode_test.py  util.py  validate.py
src/stdatamodels/_tests/: conftest.py  models.py  test_asdf_in_fits.py  test_dq.py  test_dynamicdq.py  test_fits.py  test_models.py  test_resources.py  test_util.py  test_validation.py
src/stdatamodels/_tests/jwst/datamodels/: test_integration.py  test_photom.py  test_specwcs_mirilrs_datamodel.py  test_specwcs_miriwfss_datamodel.py  test_wcs.py
src/stdatamodels/_tests/schemas/: anyof_model.yaml  core_metadata.yaml  fits_model.yaml  required_model.yaml  table_model.yaml  table_model_bad_defaults.yaml  transform_model.yaml
src/stdatamodels/jwst/: __init__.py  helpers.py
src/stdatamodels/jwst/_kwtool/: __init__.py  __main__.py  cli.py  compare.py  dmd.py  kwd.py  okified_diffs.py
src/stdatamodels/jwst/_kwtool/_tests/: conftest.py  test_against_mast.py  test_compare.py  test_dmd.py  test_kwd.py  tests_cli.py
src/stdatamodels/jwst/_tests/: test_schemas.py
src/stdatamodels/jwst/datamodels/: __init__.py  abvega_offset.py  amilg.py  amilgfitmodel.py  amioi.py  apcorr.py  asn.py  background.py  barshadow.py  combinedspec.py  conftest.py  contrast.py  conv_kernel.py  cube.py  dark.py  darkMIRI.py  darkNIRSpec.py  dqflags.py  drizproduct.py  emi.py  extract1d_spec.py  extract1dimage.py  flat.py  fringe.py  fringefreq.py  gain.py  gls_rampfit.py  guider.py  ifucube.py  ifucubepars.py  ifuimage.py  ifuoffset.py  image.py  integration.py  ipc.py  irs2.py  lastframe.py  level1b.py  linearity.py  mask.py  (+59 more)
src/stdatamodels/jwst/datamodels/_tests/: test_models.py  test_multislit.py  test_open.py  test_specwcs_miriwfss_datamodel.py  test_wcs.py
src/stdatamodels/jwst/datamodels/schemas/: __init__.py  abvegaoffset.schema.yaml  ami.schema.yaml  amilg.schema.yaml  amilgfitmodel.schema.yaml  amioi.schema.yaml  asn.schema.yaml  barshadow.schema.yaml  bunit.schema.yaml  cheby.schema.yaml  chromcorr.schema.yaml  combinedspec.schema.yaml  combinedspectable.schema.yaml  combinedspecunits.schema.yaml  contrast.schema.yaml  conv_kernel.schema.yaml  core.schema.yaml  cube.schema.yaml  dark.schema.yaml  darkMIRI.schema.yaml  darkNIRSpec.schema.yaml  dark_nirspec.schema.yaml  dq_def.schema.yaml  emi.schema.yaml  extract1dimage.schema.yaml  fgsimg_apcorr.schema.yaml  fgsimg_photom.schema.yaml  filteroffset.schema.yaml  flat.schema.yaml  flatcorr.schema.yaml  fringe.schema.yaml  fringe_freq.schema.yaml  gain.schema.yaml  gls_rampfit.schema.yaml  group.schema.yaml  guider_cal.schema.yaml  guider_meta.schema.yaml  guider_raw.schema.yaml  ifucube.schema.yaml  ifucubepars.schema.yaml  (+184 more)
src/stdatamodels/jwst/datamodels/tests/: test_fits.py  test_get_metadata.py  test_integration.py  test_models.py  (+15 more)
src/stdatamodels/jwst/transforms/: __init__.py  extensions.py  integration.py  models.py
src/stdatamodels/resources/data/: jwst_tag.yaml
src/stdatamodels/resources/manifests/: datamodels-1.0.yaml
src/stdatamodels/resources/schemas/: bozo-1.0.0.yaml
tests/: conftest.py  models.py  test_asdf_in_fits.py  test_dq.py  test_dynamicdq.py  test_embedded_asdf.py  test_filetype.py  test_fits.py  test_history.py  test_models.py  test_open.py  test_resources.py  test_s3_utils.py  test_schema.py  test_schema_docs.py  test_singleton.py  test_stdatamodels.py  test_storage.py  test_util.py  test_validation.py
tests/data/: fits_model.fits  jwst_image.fits  nonstandard_primary_array.schema.yaml
tests/jwst/: test_schemas.py
tests/jwst/datamodels/: test_fits.py  test_models.py  test_multiexposure.py  test_multislit.py  test_open.py  test_photom.py  test_photom_miriwfss_datamodel.py  test_read_metadata.py  test_schema.py  test_schema_against_crds.py  test_specwcs_mirilrs_datamodel.py  test_validation.py  test_wcs.py
tests/jwst/transforms/: test_models.py  test_transforms.py
tests/schemas/: anyof_model.yaml  basic_model.yaml  core_metadata.yaml  defaults_model.yaml  deprecated_model.yaml  fits_model.yaml  fits_required_model.yaml  required_model.yaml  table_model.yaml  validation_model.yaml
(+88 files in other folders)
