[metadata]
name = stdatamodels
description = TODO
long_description = TODO
author = TODO
license = BSD-3-Clause
url = https://github.com/spacetelescope/stdatamodels
project_urls =
    Bug Tracker = https://github.com/spacetelescope/stdatamodels/issues
    Source Code = https://github.com/spacetelescope/stdatamodels
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
zip_safe = True
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    jsonschema>=3.0.2
    # The tests require code that is in asdf master
    # but not yet released.  The package itself
    # is compatible with asdf 2.7.
    asdf>=2.7.1
    psutil>=5.7.2
    numpy>=1.16
    astropy>=4.0
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=4.6.0
    pytest-doctestplus
    pytest-openfiles>=0.5.0
aws =
    stsci-aws-utils>=0.1.2

[flake8]
select = F, W, E101, E111, E112, E113, E401, E402, E501, E711, E722
# We should set max line length to 88 eventually
max-line-length = 130
exclude =
    docs,
ignore = E203, W503, W504, W605

[tool:pytest]
minversion = 4.6
doctest_plus = true
doctest_rst = true
text_file_format = rst
addopts = --open-files
testpaths =
    tests
    src
